--- a/surwiwal 2d (własny/Assembly-CSharp.csproj
+++ b/surwiwal 2d (własny/Assembly-CSharp.csproj
@@ -59,13 +59,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\TesT\EndlessTerrain.cs" />
+    <Compile Include="Assets\scripts\EQScripts\ItemData.cs" />
+    <Compile Include="Assets\scripts\EQScripts\InventoryHighlight.cs" />
+    <Compile Include="Assets\scripts\EQScripts\GridInteract.cs" />
     <Compile Include="Assets\TesT\MapGenerator.cs" />
+    <Compile Include="Assets\scripts\EQScripts\ItemGrid.cs" />
     <Compile Include="Assets\TesT\TextureGenerator.cs" />
     <Compile Include="Assets\TesT\Noise.cs" />
+    <Compile Include="Assets\scripts\EQScripts\InventoryController.cs" />
     <Compile Include="Assets\TesT\MapDisplay.cs" />
     <Compile Include="Assets\scripts\Gamemanager.cs" />
     <Compile Include="Assets\scripts\MainMenu.cs" />
     <Compile Include="Assets\scripts\PlayerController.cs" />
+    <Compile Include="Assets\scripts\EQScripts\InventoryItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
