--- a/surwiwal 2d (własny/Assembly-CSharp.csproj
+++ b/surwiwal 2d (własny/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Assets\TesT\EndlessTerrain.cs" />
     <Compile Include="Assets\scripts\EQScripts\ItemData.cs" />
     <Compile Include="Assets\scripts\EQScripts\InventoryHighlight.cs" />
+    <Compile Include="Assets\scripts\UIStateManager.cs" />
     <Compile Include="Assets\scripts\EQScripts\GridInteract.cs" />
     <Compile Include="Assets\TesT\MapGenerator.cs" />
     <Compile Include="Assets\scripts\EQScripts\ItemGrid.cs" />
@@ -68,9 +69,10 @@
     <Compile Include="Assets\TesT\Noise.cs" />
     <Compile Include="Assets\scripts\EQScripts\InventoryController.cs" />
     <Compile Include="Assets\TesT\MapDisplay.cs" />
-    <Compile Include="Assets\scripts\Gamemanager.cs" />
     <Compile Include="Assets\scripts\MainMenu.cs" />
+    <Compile Include="Assets\scripts\HealthScript.cs" />
     <Compile Include="Assets\scripts\PlayerController.cs" />
+    <Compile Include="Assets\scripts\DecayScript.cs" />
     <Compile Include="Assets\scripts\EQScripts\InventoryItem.cs" />
   </ItemGroup>
   <ItemGroup>
