--- a/surwiwal 2d (własny/Assembly-CSharp.csproj
+++ b/surwiwal 2d (własny/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\scripts\EQScripts\InventoryController.cs" />
     <Compile Include="Assets\TesT\MapDisplay.cs" />
     <Compile Include="Assets\scripts\MainMenu.cs" />
+    <Compile Include="Assets\scripts\EQScripts\ShowIfAttribute.cs" />
     <Compile Include="Assets\scripts\HealthScript.cs" />
     <Compile Include="Assets\scripts\PlayerController.cs" />
     <Compile Include="Assets\scripts\DecayScript.cs" />
